[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelfunc"
version = "0.0.1"
description = "Modelfunc for fastice"
authors = [
    { name = "Ian Joughin", email = "irj@uw.edu" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["SAR", "NISAR", "GrIMP"]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["modelfunc"]

[project.urls]
Homepage = "https://github.com/fastice/modelfunc"
Repository = "https://github.com/fastice/modelfunc"

[project.scripts]

